# talk-repo-2

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  main.py  models.py  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: 7cf674d6c533_initial_migration_users_and_tasks_tables.py
application/dto/: task_dto.py  user_dto.py
application/use_cases/: auth_use_cases.py
domain/entities/: task.py  user.py
domain/repositories/: task_repository.py  user_repository.py
domain/value_objects/: email.py  password.py  task_id.py  user_id.py
infrastructure/auth/: jwt_service.py  password_service.py
infrastructure/config/: auth.py  database.py
infrastructure/database/: base.py  models.py
infrastructure/repositories/: task_repository_impl.py  user_repository_impl.py
presentation/api/: auth_router.py  task_router.py
presentation/middleware/: auth.py
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_task_endpoints.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_entities.py  test_value_objects.py
tests/unit/infrastructure/: test_auth_services.py
